// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-core/DescriptionText should renders correctly with descriptionFont 1`] = `
<Text
  allowFontScaling={true}
  style={
    Array [
      Object {
        "color": "#444B5A",
        "fontFamily": "Inter-Medium",
        "fontSize": 24,
        "lineHeight": 30,
      },
      Array [
        Object {
          "marginTop": 36,
          "textAlign": "center",
        },
        Object {
          "backgroundColor": "#000",
        },
      ],
    ]
  }
>
  description text two
</Text>
`;

exports[`@npm/mobydick-core/DescriptionText should renders correctly without descriptionFont 1`] = `
<Text
  allowFontScaling={true}
  style={
    Array [
      Object {
        "color": "#5E6678",
        "fontFamily": "Inter-Regular",
        "fontSize": 21,
        "lineHeight": 27,
      },
      Array [
        Object {
          "marginTop": 36,
          "textAlign": "center",
        },
        Object {
          "flex": 1,
        },
      ],
    ]
  }
>
  descriptionText
</Text>
`;
